# codecity

./: .gitignore  README.md  package.json  pnpm-lock.yaml  skills-lock.json
.github/workflows/: release.yml
apps/desktop/: package.json
apps/desktop/scripts/: prod-start.js  start-server.js
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/analysis/: layout.rs  mod.rs  parser.rs
apps/web/: .env.example  next.config.ts  package.json  tsconfig.tsbuildinfo  vercel.json
apps/web/src/: auth.config.ts  auth.ts  middleware.ts
apps/web/src/app/: page.tsx  providers.tsx
apps/web/src/app/admin/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/explore/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/components/: app-navbar.tsx  app-sidebar.tsx  custom-sidebar-trigger.tsx  dashboard-skeleton.tsx  header.tsx  latest-change.tsx  mobile-nav.tsx  nav-user.tsx
apps/web/src/components/city/: bottom-bar.tsx  building-labels.tsx  building.tsx  camera-controller.tsx  chat-panel.tsx  city-scene.tsx  code-viewer.tsx  commit-timeline.tsx  demo-building.tsx  demo-ground.tsx  demo-scene.tsx  dependency-pipes.tsx  district-ground.tsx  district-legend.tsx  extension-filter.tsx  file-details.tsx  file-tree.tsx  ground.tsx  left-panel.tsx  lighting.tsx  minimap.tsx  (+9 more)
apps/web/src/lib/: auth-helpers.ts  client-cache.ts  db.ts  firebase-admin.ts  firebase.ts  inngest-functions.ts  inngest.ts  project-store.ts  redis.ts
docs/plans/: 2026-02-24-v2-full-redesign-design.md
homepage/src/app/: layout.tsx  page.tsx  robots.ts  sitemap.ts
homepage/src/components/home/: cta.tsx  downloads.tsx  explore-section.tsx  features.tsx  footer.tsx  hero-section.tsx  how-it-works.tsx  why-codecity.tsx
homepage/src/components/layout/: navbar.tsx
homepage/src/ui/styles/: globals.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/analysis/: auth.rs  db.rs  github.rs  layout.rs  mod.rs  parser.rs  pipeline.rs
src/app/dashboard/: layout.tsx  page.tsx
src/app/project/: layout.tsx  page.tsx
src/components/city/: bottom-bar.tsx  building-labels.tsx  camera-controller.tsx  city-scene.tsx  code-viewer.tsx  dependency-pipes.tsx  file-tree.tsx  instanced-buildings.tsx  project-shell.tsx  project-visualization.tsx  selection-marker.tsx  side-panel.tsx  use-city-store.tsx
src/components/dashboard/: app-sidebar.tsx  explore-tab.tsx  github-repos-tab.tsx  my-projects-tab.tsx  nav-main.tsx  new-analysis-dialog.tsx  update-button.tsx
src/components/ui/: huge-icon.tsx
src/lib/: tauri.ts
src/lib/types/: city.ts
src/lib/visualization/: building-dimensions.ts
src/ui/styles/: globals.css
(+29 files in other folders)
