[package]
name = "codecity"
version = "0.0.0"
description = "Codecity Desktop App"
authors = ["Codecity"]
edition = "2021"

[lib]
name = "codecity_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.26"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-css = "0.25"
tree-sitter-html = "0.23"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-markdown = "0.7"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-kotlin-ng = "1"
tree-sitter-bash = "0.25"
tree-sitter-toml = "0.20"
tree-sitter-zig = "1"
tree-sitter-lua = "0.5"
tree-sitter-haskell = "0.23"
tree-sitter-dart = "0.2"
tree-sitter-elixir = "0.3"
tree-sitter-scala = "0.26"
tree-sitter-r = "1.2"
tree-sitter-julia = "0.23"
tree-sitter-perl = "1.1"
tree-sitter-c-sharp = "0.23"
tree-sitter-erlang = "0.16"
tree-sitter-latex = "0.1"
tree-sitter-dockerfile = "0.2"
tree-sitter-nix = "0.3"
tree-sitter-glsl = "0.2"
tree-sitter-make = "1.1"
tree-sitter-ocaml = "0.24"
tree-sitter-wgsl = "0.0.6"
tree-sitter-groovy = "0.1"
tree-sitter-graphql = "0.1"
tree-sitter-elisp = "1.6"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
rayon = "1.10"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
dirs = "6"
once_cell = "1"
regex = "1"
