[package]
name = "codecity"
version = "0.0.0"
description = "Codecity Desktop App"
authors = ["Codecity"]
edition = "2021"

[lib]
name = "codecity_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-css = "0.25"
tree-sitter-html = "0.23"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-markdown = "0.7"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
rayon = "1.10"
